fix conversion script, add social data

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,18 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Explore Art Council grant data" />
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+  <meta name="description" content="This is a list of organisations and how much funding they got this time
+  compared to the last round from 2018-2022. We made this because we heard
+  that it was challenging to compare between the two funding rounds." />
+
+
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="og:image" content="/social-banner.png" />
+
+  </meta>
+
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -20,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Arts council data | ff.studio</title>
+  <title>Explore Arts Council funding data | ff.studio</title>
 </head>
 
 <body>
