fix twitter card meta

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,9 @@
   that it was challenging to compare between the two funding rounds." />
 
 
-
   <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Explore Arts Council funding data">
+
   <meta property="og:image" content="/social-banner.png" />
 
   </meta>
