--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,11 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Explore Arts Council funding data">
+  <meta property="twitter:image" content="/social-banner.png" />
+  <meta name="twitter:description" content="This is a list of organisations and how much funding they got this time
+  compared to the last round from 2018-2022. We made this because we heard
+  that it was challenging to compare between the two funding rounds." />
+
 
   <meta property="og:image" content="/social-banner.png" />
 
