--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Explore Arts Council funding data">
-  <meta property="twitter:image" content="https://arts-council.netlify.app/social-banner.png" />
+  <meta property="twitter:image" content="%PUBLIC_URL%/social-banner.png" />
   <meta name="twitter:description" content="This is a list of organisations and how much funding they got this time
   compared to the last round from 2018-2022. We made this because we heard
   that it was challenging to compare between the two funding rounds." />
