--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Explore Arts Council funding data">
+  <meta name="twitter:site" content="@dinosaurenby" />
+  <meta name="twitter:creator" content="@dinosaurenby" />
   <meta property="twitter:image" content="%PUBLIC_URL%/social-banner.png" />
   <meta name="twitter:description" content="This is a list of organisations and how much funding they got this time
   compared to the last round from 2018-2022. We made this because we heard
