--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,12 @@
   <meta name="twitter:title" content="Explore Arts Council funding data">
   <meta name="twitter:site" content="@dinosaurenby" />
   <meta name="twitter:creator" content="@dinosaurenby" />
-  <meta property="twitter:image" content="%PUBLIC_URL%/social-banner.png" />
+  <meta property="twitter:image" content="https://artsfunding.ff.studio/social-banner.png" />
   <meta name="twitter:description" content="This is a list of organisations and how much funding they got this time
   compared to the last round from 2018-2022. We made this because we heard
   that it was challenging to compare between the two funding rounds." />
 
-  <meta property="og:image" content="%PUBLIC_URL%/social-banner.png" />
+  <meta property="og:image" content="https://artsfunding.ff.studio/social-banner.png" />
 
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
